appId: dev.ipf.whitenoise.android.maestrolab
name: keys-correct-mismatch
---
- runFlow: ../fixtures/runtime-ready.yaml
- assertVisible: "Maestro group"
- runFlow: ../fixtures/open-settings.yaml
- assertVisible: "Settings"
- tapOn: "Profile Keys"
- assertVisible: "Private key hidden"
- runFlow: ../fixtures/open-encrypted-key-editor.yaml
- assertVisible: "Encrypted Private Key"
- tapOn:
    id: "profile_keys.export_password"
- assertVisible:
    id: "profile_keys.export_password"
    focused: true
- inputText: "Maestro-test1!"
- assertVisible:
    id: "profile_keys.export_password"
    text: "^Maestro-test1!$"
- hideKeyboard
- tapOn:
    id: "profile_keys.export_confirmation"
- assertVisible:
    id: "profile_keys.export_confirmation"
    focused: true
- inputText: "Maestro-test2!"
- assertVisible:
    id: "profile_keys.export_confirmation"
    text: "^Maestro-test2!$"
- hideKeyboard
- assertVisible:
    id: "profile_keys.view_backup"
    enabled: false
- assertVisible:
    id: "profile_keys.export_file"
    enabled: false
- assertVisible: "Passwords don’t match.*"
- longPressOn:
    id: "profile_keys.export_confirmation"
- runFlow:
    when:
      notVisible: "(?i)select all"
    commands:
      - runFlow:
          when:
            visible: "More options"
          commands:
            - tapOn: "More options"
- runFlow:
    when:
      visible: "(?i)select all"
    commands:
      - tapOn: "(?i)select all"
- assertVisible:
    id: "profile_keys.export_confirmation"
    focused: true
- eraseText: 1
- assertNotVisible:
    id: "profile_keys.export_confirmation"
    text: ".+"
- tapOn:
    id: "profile_keys.export_confirmation"
- assertVisible:
    id: "profile_keys.export_confirmation"
    focused: true
- inputText: "Maestro-test1!"
- assertVisible:
    id: "profile_keys.export_confirmation"
    text: "^Maestro-test1!$"
- hideKeyboard
- assertVisible:
    id: "profile_keys.view_backup"
    enabled: true
- assertVisible:
    id: "profile_keys.export_file"
    enabled: true
- assertNotVisible: "Passwords don’t match.*"
- tapOn: "Cancel"
- assertVisible: "Private key hidden"
- assertNotVisible: "Encrypted Private Key"
